--- a/style2.css
+++ b/style2.css
@@ -50,16 +50,36 @@ body{
     padding: 15px;
     margin: 37px;
     height: 100px;
-    filter: grayscale(100%);
-    transition: filter 0.3s ease-in-out;
-    overflow: hidden;
-    position: relative;
-    transition: transform 0.3s ease;
+    border-radius: 10px;
+    animation: bounce 3s ease-in-out infinite;
 }
-.animated_image:hover {
-    filter: grayscale(0%);
-    transform: scale(1.4); 
+.animated_image:nth-child(2) {
+    animation-delay: 0.1s;
 }
+.animated_image:nth-child(3) {
+    animation-delay: 0.6s;
+}
+.animated_image:nth-child(4) {
+    animation-delay: 1s;
+}
+.animated_image:nth-child(5) {
+    animation-delay: 0.1s;
+}
+.animated_image:nth-child(6) {
+    animation-delay: 0.6s;
+}
+.animated_image:nth-child(7) {
+    animation-delay: 1s;
+}
+@keyframes bounce {
+    0%, 100% {
+        transform: translateY(0px);
+    }
+    50% {
+        transform: translateY(20px);
+    }
+}
+
 
 #one_sec{
     background-color: rgb(41, 16, 65, 0.6);
