--- a/style3.css
+++ b/style3.css
@@ -46,19 +46,50 @@ body{
     height: 130px;
 }
 
-.animated_image{
-    padding: 15px;
-    margin: 37px;
-    height: 100px;
-    filter: grayscale(100%);
-    transition: filter 0.3s ease-in-out;
+.carousel {
+    background-color: rgb(41, 16, 65, 0.6);
+    background-size: 600px;
+    border-top-left-radius: 20px;
+    border-top-right-radius: 20px;
+    border-bottom-right-radius: 20px;
+    border-bottom-left-radius: 20px;
+    margin-left: 10px;
+    margin-right: 10px;
+    padding: 40px;
+    padding-top: 10px;
+    margin: 20px;
+    width: 80%;
+    max-width: 100px;
     overflow: hidden;
     position: relative;
-    transition: transform 0.3s ease;
+    border-radius: 10px;
 }
-.animated_image:hover {
-    filter: grayscale(0%);
-    transform: scale(1.4); 
+@keyframes scroll {
+    0% { transform: translateX(100%); }
+    100% { transform: translateX(-100%); }
+}
+.carousel-track{
+    height: 100px;
+    display: inline-block; /* Asegúrate de que las imágenes estén en línea */
+    animation: scroll 10s linear infinite;
+}
+.carousel-track:nth-child(1) {
+    animation-delay: 0s;
+}
+.carousel-track:nth-child(2) {
+    animation-delay: 2s; 
+}
+.carousel-track:nth-child(3) {
+    animation-delay: 4s; 
+}
+.carousel-track:nth-child(4) {
+    animation-delay: 6s; 
+}
+.carousel-track:nth-child(5) {
+    animation-delay: 8s; 
+}
+.carousel-track:nth-child(6) {
+    animation-delay: 10s; 
 }
 
 #one_sec{
