--- a/style3.css
+++ b/style3.css
@@ -42,54 +42,48 @@ body{
 
 .pc_image{
     padding: 15px;
-    margin: 37px;
-    height: 130px;
+    height: 150px;
+    padding-left: 100px;
 }
 
-.carousel {
+#carousel{
     background-color: rgb(41, 16, 65, 0.6);
-    background-size: 600px;
     border-top-left-radius: 20px;
     border-top-right-radius: 20px;
     border-bottom-right-radius: 20px;
     border-bottom-left-radius: 20px;
     margin-left: 10px;
     margin-right: 10px;
-    padding: 40px;
-    padding-top: 10px;
-    margin: 20px;
-    width: 80%;
-    max-width: 100px;
+    width: 400px;
+    height: 400px;
     overflow: hidden;
     position: relative;
     border-radius: 10px;
+}.carousel-track {
+    display: flex;
+    animation: auto-scroll 10s infinite linear;
 }
-@keyframes scroll {
-    0% { transform: translateX(100%); }
-    100% { transform: translateX(-100%); }
+.carousel-track img {
+    height: 200px;
+    margin: 65px;
+    margin-top: 35px;
+    object-fit: cover;
+    flex-shrink: 0;
 }
-.carousel-track{
-    height: 100px;
-    display: inline-block; /* Asegúrate de que las imágenes estén en línea */
-    animation: scroll 10s linear infinite;
+@keyframes auto-scroll {
+    0% { transform: translateX(0); }
+    16.7% { transform: translateX(-100%); }
+    33.4% { transform: translateX(-200%); }
+    50.1% { transform: translateX(-300%); }
+    66.8% { transform: translateX(-400%); }
+    83.5% { transform: translateX(-520%); }
+    100% { transform: translateX(0); }
 }
-.carousel-track:nth-child(1) {
-    animation-delay: 0s;
-}
-.carousel-track:nth-child(2) {
-    animation-delay: 2s; 
-}
-.carousel-track:nth-child(3) {
-    animation-delay: 4s; 
-}
-.carousel-track:nth-child(4) {
-    animation-delay: 6s; 
-}
-.carousel-track:nth-child(5) {
-    animation-delay: 8s; 
-}
-.carousel-track:nth-child(6) {
-    animation-delay: 10s; 
+.carousel:hover .carousel-track {
+    animation-play-state: paused;
+    cursor: grab;
+    transform: translateX(-100%);
+    transition: transform 0.5s ease;
 }
 
 #one_sec{
