--- a/style3.css
+++ b/style3.css
@@ -5,17 +5,86 @@ body{
     font-family: Arial, Helvetica, sans-serif;
 }
 
-.title{
-    background-image: url('img/header.jfif');
-    border-top-left-radius: 10px;  
-    border-top-right-radius: 20px;  
-    border-bottom-right-radius: 30px; 
-    border-bottom-left-radius: 40px; 
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-    align-items: center;
-    height: 60px;
+.navbar {
     display: flex;
-    justify-content: center; 
+    justify-content: space-between;
+    align-items: center;
+    padding: 15px 30px;
+    background-image: url('img/deg.jpg');
+    background-position-y: 450px;
+    color: white;
+    margin-bottom: 20px;
+}
+
+.icon{
+    transition: box-shadow 0.3s ease;
+    border-top-left-radius: 20px;
+    border-bottom-right-radius: 20px;
+}
+
+.icon :hover {
+    box-shadow: 0 0 30px 15px rgb(255, 255, 255);
+    border-top-left-radius: 20px;
+    border-bottom-right-radius: 20px;
+}
+
+.logo {
+    font-size: 30px;
+    font-weight: bold;
+}
+
+.nav-links {
+    list-style: none;
+    display: flex;
+    gap: 20px;
+}
+
+.nav-links li {
+    position: relative;
+}
+
+.nav-links a {
+    text-decoration: none;
+    color: white;
+    font-size: 16px;
+    padding: 10px 15px;
+    transition: box-shadow 0.3s ease;
+}
+
+.nav-links a:hover {
+    box-shadow: 0 0 30px 15px rgb(255, 255, 255);
+}
+
+.submenu {
+    display: none;
+    position: absolute;
+    top: 110%;
+    left: 0;
+    background: rgb(255, 255, 255, 0.7);
+    margin-top: 10px;
+    color: black;
+    list-style: none;
+    border-radius: 5px;
+    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+    position: absolute;
+    z-index: 1000;
+}
+
+.submenu li a {
+    padding: 10px 15px;
+    display: block;
+    text-decoration: none;
+    color: black;
+    font-size: 14px;
+    transition: background 0.3s;
+}
+
+.submenu li a:hover {
+    background: #f1f1f1;
+}
+
+.dropdown:hover .submenu {
+    display: block;
 }
 
 #main_content{
@@ -59,7 +128,8 @@ body{
     overflow: hidden;
     position: relative;
     border-radius: 10px;
-}.carousel-track {
+}
+.carousel-track {
     display: flex;
     animation: auto-scroll 10s infinite linear;
 }
@@ -84,6 +154,18 @@ body{
     cursor: grab;
     transform: translateX(-100%);
     transition: transform 0.5s ease;
+}
+
+.carousel-track img{
+    transition: box-shadow 0.3s ease;
+    border-top-left-radius: 50px;
+    border-top-right-radius: 50px;
+    border-bottom-left-radius: 50px;
+    border-bottom-right-radius: 50px;
+    
+}
+.carousel-track img:hover {
+    box-shadow: 0 0 30px 15px rgb(255, 255, 255);
 }
 
 #one_sec{
