--- a/style3.css
+++ b/style3.css
@@ -68,6 +68,9 @@ body{
     box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
     position: absolute;
     z-index: 1000;
+    padding: 0px;
+    margin: 0px;
+    margin-top: 7px;
 }
 
 .submenu li a {
@@ -76,15 +79,24 @@ body{
     text-decoration: none;
     color: black;
     font-size: 14px;
-    transition: background 0.3s;
+    transition: background 1s;
+    display: flex;
+    align-items: center;
+    white-space: nowrap;
+    border-radius: 5px;
 }
 
 .submenu li a:hover {
     background: #f1f1f1;
+    border-radius: 5px;
 }
 
 .dropdown:hover .submenu {
     display: block;
+}
+
+.emoji{
+    margin-right: 10px;
 }
 
 #main_content{
@@ -155,7 +167,6 @@ body{
     transform: translateX(-100%);
     transition: transform 0.5s ease;
 }
-
 .carousel-track img{
     transition: box-shadow 0.3s ease;
     border-top-left-radius: 50px;
