--- a/style3.css
+++ b/style3.css
@@ -209,7 +209,7 @@ body{
     transition: box-shadow 0.3s ease;
 }
 .send_button:hover {
-    box-shadow: 0 0 25px 7px #7f00d3;
+    box-shadow: 0 0 25px 7px #ffffff;
 }
 
 .link{
