--- a/style2.css
+++ b/style2.css
@@ -18,6 +18,100 @@ body{
     justify-content: center; 
 }
 
+.navbar {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 15px 30px;
+    background-image: url('img/deg.jpg');
+    background-position-y: 450px;
+    color: white;
+    margin-bottom: 20px;
+}
+
+.icon{
+    transition: box-shadow 0.3s ease;
+    border-top-left-radius: 20px;
+    border-bottom-right-radius: 20px;
+}
+
+.icon :hover {
+    box-shadow: 0 0 30px 15px rgb(255, 255, 255);
+    border-top-left-radius: 20px;
+    border-bottom-right-radius: 20px;
+}
+
+.logo {
+    font-size: 30px;
+    font-weight: bold;
+}
+
+.nav-links {
+    list-style: none;
+    display: flex;
+    gap: 20px;
+}
+
+.nav-links li {
+    position: relative;
+}
+
+.nav-links a {
+    text-decoration: none;
+    color: white;
+    font-size: 16px;
+    padding: 10px 15px;
+    transition: box-shadow 0.3s ease;
+}
+
+.nav-links a:hover {
+    box-shadow: 0 0 30px 15px rgb(255, 255, 255);
+}
+
+.submenu {
+    display: none;
+    position: absolute;
+    top: 110%;
+    left: 0;
+    background: rgb(255, 255, 255, 0.7);
+    margin-top: 10px;
+    color: black;
+    list-style: none;
+    border-radius: 5px;
+    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+    position: absolute;
+    z-index: 1000;
+    padding: 0px;
+    margin: 0px;
+    margin-top: 7px;
+}
+
+.submenu li a {
+    padding: 10px 15px;
+    display: block;
+    text-decoration: none;
+    color: black;
+    font-size: 14px;
+    transition: background 1s;
+    display: flex;
+    align-items: center;
+    white-space: nowrap;
+    border-radius: 5px;
+}
+
+.submenu li a:hover {
+    background: #f1f1f1;
+    border-radius: 5px;
+}
+
+.dropdown:hover .submenu {
+    display: block;
+}
+
+.emoji{
+    margin-right: 10px;
+}
+
 #main_content{
     display: flex;
     justify-content: center;
@@ -50,7 +144,6 @@ body{
     padding: 15px;
     margin: 37px;
     height: 100px;
-    border-radius: 10px;
     animation: bounce 3s ease-in-out infinite;
 }
 .animated_image:nth-child(2) {
@@ -105,12 +198,12 @@ body{
     margin-left: 23px;
 }
 
-.send_button{
+#send_button{
     background-image: url('img/button.jfif');
     color: white;
     transition: box-shadow 0.3s ease;
 }
-.send_button:hover {
+#send_button:hover {
     box-shadow: 0 0 25px 7px #7f00d3;
 }
 
